added: adaptive footer

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         квадроциклах⠀⠀⠀⠀ 
         в Геленджике</h1>
       <h3>приезжайте за новыми ощущениями и эмоциями!</h3>
-      <span><button class="header__bluebutton">Подобрать маршрут <img src="./assets/images/sasha/стрелка.png" alt="strl"></button></span>
+      <button class="header__bluebutton">Подобрать маршрут <img class="blue" src="./assets/images/sasha/стрелка.png" alt="strl"></button>
     </div>
   </div>
   </header>
@@ -312,9 +312,9 @@
             <label class="block__label" for="ask-1">Актуальный вопрос?<img class="block__img"
                 src="/assets/images/questionsSection/arrow.svg" alt="arrow" /></label>
             <div class="answer">
-              Lorem Ipsum is simply dummy text of the printing and typesetting <br /> industry. Lorem Ipsum has been
-              the industry's standard dummy text <br /> ever since the 1500s, when an unknown printer took a galley
-              of type <br /> and scrambled it to make a type specimen book.
+              Lorem Ipsum is simply dummy text of the printing and typesetting  industry. Lorem Ipsum has been
+              the industry's standard dummy text  ever since the 1500s, when an unknown printer took a galley
+              of type  and scrambled it to make a type specimen book.
             </div>
           </div>
           <div class="block">
@@ -322,9 +322,9 @@
             <label class="block__label" for="ask-2">Актуальный вопрос?<img class="block__img"
                 src="/assets/images/questionsSection/arrow.svg" alt="arrow" /></label>
             <div class="answer">
-              Lorem Ipsum is simply dummy text of the printing and typesetting <br /> industry. Lorem Ipsum has been
-              the industry's standard dummy text <br /> ever since the 1500s, when an unknown printer took a galley
-              of type <br /> and scrambled it to make a type specimen book.
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+              the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+              of type and scrambled it to make a type specimen book.
             </div>
           </div>
           <div class="block">
@@ -332,9 +332,9 @@
             <label class="block__label" for="ask-3">Актуальный вопрос?<img class="block__img"
                 src="/assets/images/questionsSection/arrow.svg" alt="arrow" /></label>
             <div class="answer">
-              Lorem Ipsum is simply dummy text of the printing and typesetting <br /> industry. Lorem Ipsum has been
-              the industry's standard dummy text <br /> ever since the 1500s, when an unknown printer took a galley
-              of type <br /> and scrambled it to make a type specimen book.
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+              the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+              of type and scrambled it to make a type specimen book.
             </div>
           </div>
           <div class="block">
@@ -342,9 +342,9 @@
             <label class="block__label" for="ask-4">Актуальный вопрос?<img class="block__img"
                 src="/assets/images/questionsSection/arrow.svg" alt="arrow" /></label>
             <div class="answer">
-              Lorem Ipsum is simply dummy text of the printing and typesetting <br /> industry. Lorem Ipsum has been
-              the industry's standard dummy text <br /> ever since the 1500s, when an unknown printer took a galley
-              of type <br /> and scrambled it to make a type specimen book.
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+              the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+              of type and scrambled it to make a type specimen book.
             </div>
           </div>
         </div>
@@ -403,8 +403,9 @@
   <!-----------------------------------Footer----------------------------------------------->
   <footer>
     <div class="footer__container">
-      <div class="contacts">
-        <h2 class="contacts__title">Контакты</h2>
+      
+        <div class="footer-title">Контакты</div>
+        <div class="contacts">
         <div class="connect adress">
           <img class="connect__img " src="/assets/images/footer/adress.svg" alt="adress-icon" />
           <p class="connect__title ">Город Геленджик</p>
