sale+sert blocks added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <header class="header">
     <div class="wrapper">
     <div class="header__row">
-      <a class="header__logo"><img src="./assets/images/sasha/лого.svg" alt="logo"></a>
+      <a class="header__logo"><img src="./assets/images/sasha/лого.png" alt="logo"></a>
       <nav class="header__menu">
         <div class="header__list">
           <a href="#">МАРШРУТЫ</a>
@@ -222,81 +222,34 @@
     </section>
     <!--routs section end-->
     <!--------------------------------Sale section------------------------------->
-    <div class="zatrudnyaetes_vibrat_marshrut"></div>
-    <div class="photoslider"></div>
-    <div class="video"></div>
-    <div class="nasha_komanda"></div>
-    <div class="usloviya_predost_uslug"></div>
 
-
-    <div class="main__offer">
-      <div class="main__offer_text">
-        <p>Спецпредложения</p>
-      </div>
-
-      <div class="main__cards">
-        <div class="main_item main__item_left">
-          <div class="main__item_back"><img src="./assets/images/sasha/визитка.svg" alt="#">
-            <div class="item_container">
-              <div><img class="bantdom" src="./assets/images/sasha/бантик.jpg"></div>
-              <div class="text">
-                <div class="card-title">Cкидка 10%</div>
-                <div class="card-title2">на День Рождения</div>
-                <div class="card-title3">в честь Дня Рождения - дарим
-                  имениннику скидку 10%</div>
-                <div class="item_picture"><img src="./assets/images/sasha/клякса.svg"></div>
-              </div>
-            </div>
-          </div>
-
-        </div>
-        <div class="main_item main__item_right">
-          <div class="main__item_back"><img src="./assets/ima  ges/sasha/визитка.svg" alt="#">
-            <div class="item_container">
-              <div><img class="bantdom" src="./assets/images/sasha/домик.jpg"></div>
-              <div class="text">
-                <div class="card-title">Cкидка 10%</div>
-                <div class="card-title3">клиентам Ex-Kuban на услуги
-                  Загородного клуба Ягода</br> Малина</div>
-                <div class="main__offer_button">
-                  <input class="main__offer_buttoncircle" type="image" src="./assets/images/sasha/Rectangle 5.svg"
-                    alt="#">
-                  <img class="main__offer_buttonword" src="./assets/images/sasha/Подробнее.svg"></div>
-                <div class="item_picture2"><img src="./assets/images/sasha/клякса.svg"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+<div class="sale">
+<div class="wrapper">
+    <h2 class="sale__title">Спецпредложения</h2>
+    <div class="sale__cards">
+      <div class="card-item"><img src="./assets/images/sasha/1.png" alt="left-card"></div>
+      <div class="card-item"><img src="./assets/images/sasha/2.png" alt="right-card"></div>
     </div>
+  </div>
+</div>
+
     <!--------------------------------Sertificate section------------------------------->
-    <div class="main__sertificate">
-      <div class="main__sertificate_title"><img src="./assets/images/sasha/Подарочный сертификат.svg"></div>
-      <span class="main__sertificate_title2">Хотите сделать оригинальный подарок?</span>
-      <span class="main__sertificate_title2">Подарите незабываемые эмоции - лучший подарок</span>
-      <div class="main__sertificate_container">
-        <div class="main__blocktext">
-          <div class="main__textcard"><img src="./assets/images/sasha/Хотите.svg"></div>
-          <input class="main__input" type="image" src="./assets/images/sasha/Rectangle 5.svg" alt="#">
-          <input class="main__input2" type="image" src="./assets/images/sasha/Подберем сертификат для вас.svg" alt="#">
 
-        </div>
-        <div class="main__card">
-          <div class="main__card_lenta"><img src="./assets/images/sasha/Layer_2_1_.svg"></div>
-          <div class="main__card_bant"><img src="./assets/images/sasha/bant.svg"></div>
-          <div class="main__card_blot"><img src="./assets/images/sasha/синяя клякса.svg"></div>
-          <div class="main__card_sert"><img src="./assets/images/sasha/СЕРТИФИКАТ.svg"></div>
-          <div class="main__card_logo"><img src="./assets/images/sasha/лого.svg"></div>
-          <div class="main__card_text1"><img src="./assets/images/sasha/Катание на квадроциклах.svg"></div>
-          <div class="main__card_text2"><img src="./assets/images/sasha/Маршрут_ Лесная прогулка.svg"></div>
-        </div>
-      </div>
-
-
-
+<div class="sertificate">
+  <div class="wrapper">
+    <div class="sertificate__title">
+    <h2>Подарочный сертификат</h2>
+    <img src=".//assets/images/sasha/заголовок.png" alt="title">
     </div>
 
-
+  <div class="sertificate__items">
+    <div class="sertificate__text"><img src="./assets/images/sasha/Хотите.png" alt="text">
+      <span><button class="sertificate__button">Подберём сертификат для Вас</button></span>
+    </div>
+    <div class="sertificate__card"><img src="./assets/images/sasha/сертификат.png" alt="card"></div>
+  </div>
+</div>
+</div>
 
 
 
