--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -16,7 +15,6 @@
 </head>
 
 <body>
- 
   <header class="header">
     <div class="wrapper">
     <div class="header__row">
@@ -33,12 +31,11 @@
       <div class="header__phone">
         <span><img src="./assets/images/sasha/phone.svg" alt="phone">+7 928 333 26 45</span>
         <button class="header__button">Перезвоните мне</button>
-    </div>
+      </div>
   </div>
     <div class="header__title">
       <h1>Экскурсии на 
-        квадроциклах⠀⠀⠀⠀ 
-        в Геленджике</h1>
+        квадроциклах в Геленджике</h1>
       <h3>приезжайте за новыми ощущениями и эмоциями!</h3>
       <button class="header__bluebutton">Подобрать маршрут <img class="blue" src="./assets/images/sasha/стрелка.png" alt="strl"></button>
     </div>
