--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </div>
         </div>
         <div class="header__title">
-          <h1>Экскурсии на квадроциклах⠀⠀⠀⠀ в Геленджике</h1>
+          <h1>Экскурсии на квадроциклах в Геленджике</h1>
           <h3>приезжайте за новыми ощущениями и эмоциями!</h3>
           <button class="header__bluebutton">
             Подобрать маршрут
