--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
     <header class="header">
       <div class="wrapper">
         <div class="header__row">
-          <a class="header__logo"
-            ><img src="./assets/images/sasha/лого.png" alt="logo"
-          /></a>
+          <a class="header__logo"><img src="./assets/images/sasha/лого.png" alt="logo"/></a>
           <nav class="header__menu">
             <div class="header__list">
               <a href="#">МАРШРУТЫ</a>
@@ -40,10 +38,7 @@
             </div>
           </nav>
           <div class="header__phone">
-            <span
-              ><img src="./assets/images/sasha/phone.svg" alt="phone" />+7 928
-              333 26 45</span
-            >
+            <span><img class="header__item" src="./assets/images/sasha/phone.svg" alt="phone"><span>+7 928 333 26 45</span></span>
             <button class="header__button">Перезвоните мне</button>
           </div>
         </div>
@@ -58,7 +53,7 @@
               alt="strl"
             />
           </button>
-        </div>
+        </div> word-spac
       </div>
     </header>
 
