--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         <img class="backg_right" src="/CFMOTO/assets/images/team/бампер.png" alt="бампер">
         <img class="backg_left" src="/CFMOTO/assets/images/team/канистра.png" alt="канистра">
         <div class="team_photo">
-          <img class="t_photo__img" src="/CFMOTO/assets/images/services/иконка.png" alt="img"></div>
+          <img class="t_photo__img" src="/CFMOTO/assets/images/team/1.png" alt="img"></div>
         <div class="team_photo">
           <img class="t_photo__img" src="/CFMOTO/assets/images/team/2.png" alt="img"></div>
         <div class="team_photo">
