--- a/index.html
+++ b/index.html
@@ -223,26 +223,41 @@
       </div>
     </section>
     <!--routs section end-->
-    <!--------------------------------Video------------------------------->
+    <!--------------------------------Test (еще в работе)------------------------------>
+    <div class="test">
+      <div class="test_column">
+        <h2 class="test-title">Затрудняетесь выбрать маршрут?</h2>
+        <p class="test_text">Пройдите тест и мы поможем вам подобрать оптимальную под вас экскурсию</p>
+        <button class="btn-test">Начать тест</button>
+      </div>
+    </div>
+    <!--------------------------------Photo------------------------------->
+    <div class="Photo">
+      <h2 class="Photo-title">Фото</h2>
+      <div class="photo_container">
+        <img class="photo_slider" src="/assets/images/photo/Photo.png" alt="photo_slider">
+      </div>
+    </div>
 
+    <!--------------------------------Video------------------------------->
     <div class="video_container">
-      <img class="pic_video" src="/CFMOTO/assets/images/video/видео.png" alt="video">
+      <img class="pic_video" src="/assets/images/video/видео.png" alt="video">
     </div>
 
     <!--------------------------------Team------------------------------->
     <div class="team">
       <h2 class="team-title">Наша команда</h2>
       <div class="team-container">
-        <img class="backg_right" src="/CFMOTO/assets/images/team/бампер.png" alt="бампер">
-        <img class="backg_left" src="/CFMOTO/assets/images/team/канистра.png" alt="канистра">
+        <img class="backg_right" src="/assets/images/team/бампер.png" alt="бампер">
+        <img class="backg_left" src="/assets/images/team/канистра.png" alt="канистра">
         <div class="team_photo">
-          <img class="t_photo__img" src="/CFMOTO/assets/images/team/1.png" alt="img"></div>
+          <img class="t_photo__img" src="/assets/images/team/1.png" alt="img"></div>
         <div class="team_photo">
-          <img class="t_photo__img" src="/CFMOTO/assets/images/team/2.png" alt="img"></div>
+          <img class="t_photo__img" src="/assets/images/team/2.png" alt="img"></div>
         <div class="team_photo">
-          <img class="t_photo__img" src="/CFMOTO/assets/images/team/3.png" alt="img"></div>
+          <img class="t_photo__img" src="/assets/images/team/3.png" alt="img"></div>
         <div class="team_photo">
-          <img class="t_photo__img" src="/CFMOTO/assets/images/team/4.png" alt="img"></div>
+          <img class="t_photo__img" src="/assets/images/team/4.png" alt="img"></div>
       </div>
     </div>
 
@@ -254,7 +269,7 @@
           <div class="services_column">
             <div class="services_item">
               <div class="s_item_row">
-                <div class="s_img"><img src="/CFMOTO/assets/images/services/иконка.png" alt=tick></div>
+                <div class="s_img"><img src="/assets/images/services/иконка.png" alt=tick></div>
                 <div class="s_item_body">
                   <div class="s_item_text">
                     При прокате или аренде строго соблюдать правила техники
@@ -269,7 +284,7 @@
           <div class="services_column">
             <div class="services_item">
               <div class="s_item_row">
-                <div class="s_img"><img src="/CFMOTO/assets/images/services/иконка.png" alt=tick></div>
+                <div class="s_img"><img src="/assets/images/services/иконка.png" alt=tick></div>
                 <div class="s_item_body">
                   <div class="s_item_text">
                     К управлению <b>НЕ ДОПУСКАЮТСЯ</b> лица младше 16 лет и лица в алкогольном
@@ -281,7 +296,7 @@
           <div class="services_column">
             <div class="services_item">
               <div class="s_item_row">
-                <div class="s_img"><img src="/CFMOTO/assets/images/services/иконка.png" alt=tick></div>
+                <div class="s_img"><img src="/assets/images/services/иконка.png" alt=tick></div>
                 <div class="s_item_body">
                   <div class="s_item_text">
                     Распивать спиртные напитки во время проката, аренды <b>ЗАПРЕЩЕНО!</b> (После? На
@@ -294,7 +309,7 @@
           <div class="services_column">
             <div class="services_item">
               <div class="s_item_row">
-                <div class="s_img"><img src="/CFMOTO/assets/images/services/иконка.png" alt=tick></div>
+                <div class="s_img"><img src="/assets/images/services/иконка.png" alt=tick></div>
                 <div class="s_item_body">
                   <div class="s_item_text">
                     Управление осуществляйте в меру своих сил и возможностей. Не переоценивайте себя!
@@ -306,7 +321,7 @@
           <div class="services_column">
             <div class="services_item">
               <div class="s_item_row">
-                <div class="s_img"><img src="/CFMOTO/assets/images/services/иконка.png" alt=tick></div>
+                <div class="s_img"><img src="/assets/images/services/иконка.png" alt=tick></div>
                 <div class="s_item_body">
                   <div class="s_item_text">
                     Перед каждым катанием опытный инструктор научит Вас основам управления и будет
@@ -318,7 +333,7 @@
           <div class="services_column">
             <div class="services_item">
               <div class="s_item_row">
-                <div class="s_img"><img src="/CFMOTO/assets/images/services/иконка.png" alt=tick></div>
+                <div class="s_img"><img src="/assets/images/services/иконка.png" alt=tick></div>
                 <div class="s_item_body">
                   <div class="s_item_text">
                     При прокате или аренде строго соблюдать правила техники безопасности и все
