--- a/index.html
+++ b/index.html
@@ -225,10 +225,16 @@
     <!--routs section end-->
     <!--------------------------------Test (еще в работе)------------------------------>
     <div class="test">
-      <div class="test_column">
-        <h2 class="test-title">Затрудняетесь выбрать маршрут?</h2>
-        <p class="test_text">Пройдите тест и мы поможем вам подобрать оптимальную под вас экскурсию</p>
-        <button class="btn-test">Начать тест</button>
+      <div class="test_container">
+        <div class="test-row">
+          <div class="test_text">
+            <h2 class="test-title">Затрудняетесь выбрать маршрут?</h2>
+            <p class="test_text1">Пройдите тест и мы поможем вам подобрать оптимальную под вас экскурсию</p>
+          </div>
+          <div class="test_btn">
+            <button class="btn-test">Начать тест</button>
+          </div>
+        </div>
       </div>
     </div>
     <!--------------------------------Photo------------------------------->
