--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/assets/style/normalizer.css" />
+    <link rel="stylesheet" href="./assets/style/style.css" />
+    <link rel="stylesheet" href="./assets/images/sasha/фото.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
+    <title>CFMOTO</title>
+  </head>
 
   <body>
     <header class="header">
@@ -43,14 +55,7 @@
           </button>
         </div>
       </div>
-      <div class="header__title">
-        <h1>Экскурсии на квадроциклах в Геленджике</h1>
-        <h3>приезжайте за новыми ощущениями и эмоциями!</h3>
-        <button class="header__bluebutton">
-          Подобрать маршрут
-          <img class="blue" src="./assets/images/sasha/стрелка.png" alt="strl" />
-        </button>
-      </div> word-spac
+
     </div>
   </header>
 
@@ -314,29 +319,6 @@
                 alt="card"
               />
             </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!--------------------------------Sertificate section------------------------------->
-
-    <div class="sertificate">
-      <div class="wrapper">
-        <div class="sertificate__title">
-          <h2>Подарочный сертификат</h2>
-          <img src=".//assets/images/sasha/заголовок.png" alt="title" />
-        </div>
-
-        <div class="sertificate__items">
-          <div class="sertificate__text">
-            <img src="./assets/images/sasha/Хотите.png" alt="text" />
-            <span><button class="sertificate__button">
-                Подберём сертификат для Вас
-              </button></span>
-          </div>
-          <div class="sertificate__card">
-            <img src="./assets/images/sasha/сертификат.png" alt="card" />
           </div>
         </div>
       </div>
