--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
             <a class="navigation__link" href="#">ГАЛЕРЕЯ</a>
             <a class="navigation__link" href="#">ВОПРОС-ОТВЕТ</a>
             <a class="navigation__link" href="#">КОНТАКТЫ</a>
-            <a class="navigation__link navigation__link_blue" href="#"
-              >ЗАБРОНИРОВАТЬ</a
-            >
+            <a class="navigation__link" href="#">ЗАБРОНИРОВАТЬ</a>
           </nav>
           <div class="right">
             <div class="phone">
