add:adaptive changes

--- a/index.html
+++ b/index.html
@@ -325,6 +325,7 @@
           />
         </div>
       </div>
+      <!----sale------->
 
       <div class="sale">
         <img
@@ -495,10 +496,7 @@
               alt="img"
             />
             <figcaption class="photo__title">
-              <a class="photo__link" href="#"
-                >Эвакуация, ремонт <br />
-                квадроциклов</a
-              >
+              <a class="photo__link" href="#">Эвакуация, ремонт квадроциклов</a>
             </figcaption>
           </figure>
           <figure class="photo photo-two">
@@ -518,7 +516,7 @@
               alt="img"
             />
             <figcaption class="photo__title">
-              <a class="photo__link" href="#">Транспортировка <br />техники</a>
+              <a class="photo__link" href="#">Транспортировка техники</a>
             </figcaption>
           </figure>
           <figure class="photo photo-four">
@@ -538,10 +536,7 @@
               alt="img"
             />
             <figcaption class="photo__title">
-              <a class="photo__link" href="#"
-                >Корпоративы,<br />
-                тимбилдинги</a
-              >
+              <a class="photo__link" href="#">Корпоративы, тимбилдинги</a>
             </figcaption>
           </figure>
           <figure class="photo photo-six">
@@ -597,7 +592,7 @@
               alt="phone-icon"
             />
             <p class="connect__title">
-              <a class="connect__title_link" href="#"> 928 428-00-62</a>
+              <a class="connect__title_link" href="#">+7 928 428-00-62</a>
             </p>
           </div>
           <div class="connect email">
