--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
             </div>
             <button class="right__button">Перезвоните мне</button>
           </div>
+          <div class="burger">
+            <img src="/assets/images/sasha/menu.svg" alt="menu" />
+          </div>
         </div>
         <div class="area">
           <h1 class="area__title">
