add: second page+adaptive

--- a/index.html
+++ b/index.html
@@ -39,14 +39,80 @@
                 src="./assets/images/sasha/phone.svg"
                 alt="phone"
               />
-              <p class="right__number">+7 928 333 26 45</p>
+              <a class="right__number" href="#">+7 928 333 26 45</a>
             </div>
             <button class="right__button">Перезвоните мне</button>
           </div>
-          <div class="burger">
-            <img src="/assets/images/sasha/menu.svg" alt="menu" />
+          <div class="hamburger-menu">
+            <input id="menu__toggle" type="checkbox" />
+            <label class="menu__btn" for="menu__toggle">
+              <span></span>
+            </label>
+            <div class="shadow">
+              <div class="shadow-logo">
+                <img
+                  class="shadow-logo__img"
+                  src="/assets/images/sasha/лого.svg"
+                  alt="logo"
+                />
+              </div>
+              <ul class="menu__box">
+                <li class="menu-list">
+                  <a class="menu__item" href="#">МАРШРУТЫ </a>
+                  <img
+                    class="menu__arrow"
+                    src="/assets/images/sasha/arrow-shadow.svg"
+                    alt="arrow"
+                  />
+                </li>
+                <li class="menu-list">
+                  <a class="menu__item" href="#">ГАЛЕРЕЯ </a>
+                  <img
+                    class="menu__arrow"
+                    src="/assets/images/sasha/arrow-shadow.svg"
+                    alt="arrow"
+                  />
+                </li>
+                <li class="menu-list">
+                  <a class="menu__item" href="#">ВОПРОС-ОТВЕТ </a>
+                  <img
+                    class="menu__arrow"
+                    src="/assets/images/sasha/arrow-shadow.svg"
+                    alt="arrow"
+                  />
+                </li>
+                <li class="menu-list">
+                  <a class="menu__item" href="#">КОНТАКТЫ </a>
+                  <img
+                    class="menu__arrow"
+                    src="/assets/images/sasha/arrow-shadow.svg"
+                    alt="arrow"
+                  />
+                </li>
+                <li class="menu-list">
+                  <a class="menu__item" href="#">ЗАБРОНИРОВАТЬ </a>
+                  <img
+                    class="menu__arrow"
+                    src="/assets/images/sasha/arrow-shadow.svg"
+                    alt="arrow"
+                  />
+                </li>
+              </ul>
+              <div class="right-2">
+                <div class="phone-2">
+                  <img
+                    class="phone-2__img"
+                    src="./assets/images/sasha/phone.svg"
+                    alt="phone"
+                  />
+                  <a class="right-2__number" href="#">+7 928 333 26 45</a>
+                </div>
+                <button class="right-2__button">Перезвоните мне</button>
+              </div>
+            </div>
           </div>
         </div>
+
         <div class="area">
           <h1 class="area__title">
             Экскурсии на <br />
