--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
     </div>
     <!--------------------------------Photo------------------------------->
     <div class="photo">
-      <h2 class="photo__title">Фото</h2>
+      <h2 class="photo__title2">Фото</h2>
       <div class="photo__container">
         <img class="photo__slider" src="/assets/images/photo/Photo.png" alt="photo_slider">
       </div>
@@ -289,8 +289,11 @@
 
     <!--------------------------------Video------------------------------->
     <div class="video">
-      <img class="video__pic" src="/assets/images/video/видео.png" alt="video">
+      <div class="video__container">
+        <img class="video__pic" src="/assets/images/video/видео.png" alt="video">
+      </div>
     </div>
+
 
     <!--------------------------------Team------------------------------->
     <div class="team">
